--- a/whitepaper/Makefile
+++ b/whitepaper/Makefile
@@ -12,6 +12,7 @@ project: project.tex citations.bib citations.tex
 	bibtex project
 	pdflatex project
 	pdflatex project
+	mv project.pdf /output/
 #	make simpleClean
 	@echo "================================================"
 	@echo "All done! project.pdf has been created. - Titus"
