--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,12 @@ services:
     command: make project
     working_dir: /main
     volumes:
-      - './:/main'
+      - './whitepaper/:/main'
+      - './output/:/output'
   shell:
     build: .
     command: bash
     working_dir: /main
     volumes:
-      - './:/main'
+      - './whitepaper/:/main'
+      - './output/:/output'
